# shade

./: Cargo.toml  README.md  flake.nix
examples/: test.sd
src/: expr.rs  input.rs  lexer.rs  lib.rs  main.rs  module.rs  types.rs
src/ast/: evaluator.rs  mod.rs
src/ast/def/: assign.rs  mod.rs
src/ast/expr/: bin_expr.rs  mod.rs  op.rs  unary_expr.rs  value.rs
src/ast/stmt/: assign_stmt.rs  mod.rs
src/ast/ty/: mod.rs
src/lexer/: input.rs  mod.rs  token.rs
src/parser/: combinator.rs  expr.rs  grammar.rs  mod.rs  parsetree.rs  value.rs
src/parser/expr/: mod.rs  op.rs  value.rs
src/parser/internals/: combinator.rs  mod.rs  state.rs
