[package]
license = "mit"
name = "shade"
author = "AdrienDML"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Internal deps
# shade_utils = {}

# External deps 
thiserror = "1.0.49"
clap = { version = "4.4.4", features = ["derive"] }
phf = { version = "0.11.2", features = ["macros"] }
